<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:layout_marginEnd="10dp"
                android:hint="@string/user_id"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="10dp"
                android:hint="@string/email"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/password"
                android:textSize="25sp" />

            <Button
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:id="@+id/btnregister"
                android:background="#F21533C8"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#FAF8FD"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/already_registered_go_to"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#F21533C8"
                    android:text="@string/log_in"
                    android:id="@+id/btn_goto"
                    android:textAlignment="center"
                    android:textColor="#FAF8FD"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>